tests/ui/error-codes/E0390.stderr
error[E0390]: cannot define inherent `impl` for primitive types
  --> $DIR/E0390.rs:5:1
   |
LL | impl *mut Foo {}
   | ^^^^^^^^^^^^^
   |
   = help: consider using an extension trait instead

error[E0390]: cannot define inherent `impl` for primitive types
  --> $DIR/E0390.rs:7:1
   |
LL | impl fn(Foo) {}
   | ^^^^^^^^^^^^
   |
   = help: consider using an extension trait instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0390`.
